# FAQ-Django

./: pyproject.toml
faqproject/: config.ini
faqproject/faqproject/: settings.py  urls.py
faqproject/issuesapp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
faqproject/issuesapp/migrations/: 0001_initial.py  0002_remove_issue_created_at_remove_issue_image_and_more.py  0003_issue_created_at_issue_image_issue_resolved_and_more.py  0004_alter_issue_description_alter_issue_image.py  0005_tag_issue_tag.py  0006_alter_tag_name.py
faqproject/issuesapp/static/issuesapp/: styles.css
faqproject/issuesapp/templates/issuesapp/: base.html  create.html  edit_card.html  edit_issue.html  index.html  issue.html  issues.html  main.html
